Edit stream method used in find command